--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,7 @@
-
+streamlit>=1.28.0
+yfinance>=0.2.28
+pandas>=2.0.0
+numpy>=1.24.0
+scipy>=1.11.0
+plotly>=5.17.0
+# gurobipy>=10.0.0  # Optional: Requires license, not available on Streamlit Cloud free tier
